--- a/templates/GetEmp.html
+++ b/templates/GetEmp.html
@@ -14,11 +14,7 @@
 
 				<h2 style="color: grey">Enter Employee ID</h2>
 
-		  		Employee ID:<br> <input style="height:25px;font-size:14pt;" type="number" name="empid" autofocus size="40"><br><br>
-
-				Date attended:<br> <input style="height:25px;font-size:14pt;" type="number" name="dateA" autofocus size="40"><br><br>
-
-				Time attended:<br> <input style="height:25px;font-size:14pt;" type="number" name="timeA" autofocus size="40"><br><br>
+		  		Employee ID:<br> <input style="height:25px;font-size:14pt;" type="number" name="emp_id" autofocus size="40"><br><br>
 
 
 		  		<button type="submit" style="background: grey; height: 45px; width: 200px; color: white; size: 5; font:oblique;">FETCH INFO</button><br><br>
