--- a/templates/GetEmpOutput.html
+++ b/templates/GetEmpOutput.html
@@ -6,7 +6,7 @@
 <center>
 	<font color="black" size="5" style="font-family: avenir">
 
-		<h1 style="color: DodgerBlue">Employee Attendance</h1>
+		<h1 style="color: DodgerBlue">Employee Information</h1>
 
 		<body bgcolor="lightgrey">
 
@@ -16,9 +16,15 @@
 
 			  		Employee ID:<br> {{ id }} <br><br>
 
-			  		Date attended:<br> {{ dateA }} <br><br>
+			  		First Name:<br> {{ fname }} <br><br>
 
-			  		Time attended:<br> {{ timeA }} <br><br>
+			  		Last Name:<br> {{ lname }} <br><br>
+
+			  		Primary Interest:<br> {{ interest }} <br><br>
+
+			  		Location:<br> {{ location }} <br><br>
+
+			  		Image URL: <br> {{ image_url }} <br><br>
 
 			  		<button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;" formaction="http://3.134.115.108:80/getemp">RESET</button><br><br>
 
