--- a/templates/AddAttOutPut.html
+++ b/templates/AddAttOutPut.html
@@ -4,13 +4,12 @@
 <center>
 	<font color="DodgerBlue" size="5" style="font-family: avenir">
 		<body bgcolor="lightgrey">
-			<h1>SAVE SUCCESSFUL</h1><br>
-			<h2>Following attendance has been added to the database</h2><br>
-			<h2>{{ id }}{{ date }}{{ time }}</h2><br>
-			<title>Add attendance Output</title>
-				<form action="http://3.134.115.108:80/" autocomplete="on" method = "GET">
+			<h1>ATTENDANCE TAKEN SUCCESSFUL!</h1><br>
+			<h2>"{{ id }}", you've taken your attendance at "{{ dateTime }}", good Luck at work!</h2><br>
+			<title>Add attendance</title>
+				<form action="http://44.201.152.219/" autocomplete="on" method = "GET">
 
-					<button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">GO BACK</button><br><br>
+					<button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">RETURN</button><br><br>
 
 				</form>
 		</body>
