--- a/templates/AddAtt.html
+++ b/templates/AddAtt.html
@@ -10,13 +10,11 @@
 
 		<body bgcolor="lightgrey">
 
-			<form action="/addemp" autocomplete="on" method = "POST" enctype="multipart/form-data">
-
-				<button type="submit" formaction="/getemp" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">GET EMPLOYEE ATTENDANCE</button><br><br>
+			<form action="/addatt" autocomplete="on" method = "POST" enctype="multipart/form-data">
 
 		  		Employee ID:<br> <input style="height:25px;font-size:14pt; color:grey;" type="number" name="empid" autofocus size="40"><br><br>
 
-		  		<button type="submit" style="background: grey; height: 45px; width: 200px; color: white; size: 5; font:oblique;">UPDATE DATABASE</button>
+		  		<button type="submit" style="background: grey; height: 45px; width: 200px; color: white; size: 5; font:oblique;">ADD ATTENDANCE</button>
 
 			</form>
 <a href="/about">About Us</a>
