--- a/templates/GetEmpOutput.html
+++ b/templates/GetEmpOutput.html
@@ -20,13 +20,13 @@
 
 			  		Last Name:<br> {{ lname }} <br><br>
 
-			  		Primary Interest:<br> {{ interest }} <br><br>
+			  		Primary Interest:<br> {{ position }} <br><br>
 
 			  		Location:<br> {{ location }} <br><br>
 
 			  		Image URL: <br> {{ image_url }} <br><br>
 
-			  		<button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;" formaction="http://3.134.115.108:80/getemp">RESET</button><br><br>
+			  		<button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;" formaction="http://44.201.152.219/getemp">RESET</button><br><br>
 
 			  	</div>
 
