--- a/templates/AddAtt.html
+++ b/templates/AddAtt.html
@@ -42,7 +42,7 @@
 
 		<body bgcolor="lightgrey">
 
-			<form action="/addatt" autocomplete="on" method = "POST" enctype="multipart/form-data">
+			<form action="/addatt2" autocomplete="on" method = "POST" enctype="multipart/form-data">
 
 		  		Employee ID:<br> <input style="height:25px;font-size:14pt; color:grey;" type="number" id="empid" autofocus size="40"><br><br>
 
