--- a/templates/AddAtt.html
+++ b/templates/AddAtt.html
@@ -8,30 +8,30 @@
             }
 		</style>
 	<header>
-                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                    <div class="container">
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav mr-auto">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/">&nbsp;Manage Employee</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="GetEmp.html">&nbsp;Employee List</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/addatt">&nbsp;Time and Attendance</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="GetAtt.html">&nbsp;Attendance List</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/payroll">&nbsp;Payroll Generator</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
-            </header>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<div class="container">
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav mr-auto">
+						<li class="nav-item">
+							<a class="nav-link" href="/">&nbsp;Manage Employee</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="GetEmp.html">&nbsp;Employee List</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/addatt">&nbsp;Time and Attendance</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="GetAtt.html">&nbsp;Attendance List</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/payroll">&nbsp;Payroll Generator</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
 <head>
 	<title>Add Employee Attendance</title>
 </head>
@@ -46,8 +46,8 @@
 
 		  		Employee ID:<br> <input style="height:25px;font-size:14pt; color:grey;" type="number" id="empid" autofocus size="40"><br><br>
 
-		  		<button type="submit" style="background: grey; height: 45px; width: 200px; color: white; size: 5; font:oblique;">ADD ATTENDANCE</button>
-
+		  		<button type="submit" style="background: grey; height: 45px; width: 200px; color: white; size: 5; 
+				  font:oblique;">CHECK IN</button>
 			</form>
 <a href="/about">About Us</a>
 		</body>
