--- a/templates/GetEmp.html
+++ b/templates/GetEmp.html
@@ -1,5 +1,41 @@
 	<!DOCTYPE html>
 <html>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+		<style>
+			.nav-item{
+                margin: 0 36px;
+            }
+			body {
+                font-family: cursive;
+                background: gainsboro;
+            }
+		</style>
+	<header>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<div class="container">
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav mr-auto">
+						<li class="nav-item">
+							<a class="nav-link" href="/">&nbsp;Manage Employee</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="GetEmp.html">&nbsp;Employee List</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/addatt">&nbsp;Time and Attendance</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="GetAtt.html">&nbsp;Attendance List</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/payroll">&nbsp;Payroll Generator</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
 <head>
 	<title>Get Employee Information</title>
 </head>
