--- a/templates/GetAttOutPut.html
+++ b/templates/GetAttOutPut.html
@@ -1,61 +1,92 @@
 <!DOCTYPE html>
 <html>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-		<style>
-			.nav-item{
-                margin: 0 36px;
-            }
-		</style>
-	<header>
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<div class="container">
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav mr-auto">
-						<li class="nav-item">
-							<a class="nav-link" href="/">&nbsp;Manage Employee</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="GetEmp.html">&nbsp;Employee List</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="/addatt">&nbsp;Time and Attendance</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="/getatt">&nbsp;Attendance List</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="/payroll">&nbsp;Payroll Generator</a>
-						</li>
-					</ul>
-				</div>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<header>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<div class="container">
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="/">&nbsp;Manage Employee</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="GetEmp.html">&nbsp;Employee List</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/addatt">&nbsp;Time and Attendance</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/getatt">&nbsp;Attendance List</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/payroll">&nbsp;Payroll Generator</a>
+					</li>
+				</ul>
 			</div>
-		</nav>
-	</header>
+		</div>
+	</nav>
+</header>
+
 <head>
 	<title>Employee Attendance</title>
 </head>
 <style type="text/css">
-	.table{
+	.table {
 		border-collapse: collapse;
-		width: 100%;
-		color: #d96459;
-		font-family: monospace;
-		font-size: 20px;
+		color: black;
+		font-family: cursive;
+		font-size: 15px;
 		text-align: left;
+		width: 50%;
+		margin-top:40px;
 	}
+
 	th {
-		background-color: #d96459;
+		background-color: black;
 		color: white;
 	}
 
+	.nav-item {
+		margin: 0 36px;
+	}
+
+	.content {
+		margin-top: 100px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	body {
+		font-family: cursive;
+		background: gainsboro;
+	}
+
+	::-webkit-scrollbar {
+		width: 0;
+		height: 0;
+		background: transparent;
+	}
+
+	h1 {
+		font-family: cursive;
+		font-size: larger;
+		color: black;
+
+	}
+
+	h2 {
+		font-family: cursive;
+		font-size: medium;
+		color: black;
+	}
 </style>
-<center>
+<center class="content">
 	<font color="black" size="5" style="font-family: avenir">
 
-		<h1 style="color: DodgerBlue">Employee Attendance</h1>
-
-		<body bgcolor="lightgrey">
+		<body>
+			<h1>Employee Attendance</h1>
 			<form>
 				<div>
 					<table class="table">
@@ -70,7 +101,7 @@
 						{% for result in results %}
 						<tr>
 							<td>
-								 {{ results[0] }} 
+								{{ results[0] }}
 							</td>
 							<td>
 								{{ results[1] }}
@@ -80,9 +111,10 @@
 						{% endfor %}
 					</table>
 
-			  		<button type="submit" href="/getatt" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">RETURN</button><br><br>
+					<button type="submit" href="/getatt"
+						style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">RETURN</button><br><br>
 
-			  	</div>
+				</div>
 
 			</form>
 
@@ -90,4 +122,5 @@
 
 	</font>
 </center>
+
 </html>
